--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -15,7 +15,7 @@ window#waybar {
 }
 
 #workspaces {
-    margin: 3px 7px 3px 3px;
+    margin: 0px 0px 0px 0px;
     padding: 5px;
     border-radius: 15px;
     border: 2px;
@@ -26,7 +26,7 @@ window#waybar {
 }
 
 #workspaces button {
-    padding: 0px 5px;
+    padding: 0px 2px;
     margin: 4px 3px;
     border-radius: 15px;
     border: 0px;
@@ -38,9 +38,9 @@ window#waybar {
 
 #workspaces button.active {
     color: #0cf;
-    background: #0cf;
+    background-color: #0cf;
     border-radius: 15px;
-    min-width: 40px;
+    min-width: 0px;
     transition: all 0.3s ease-in-out;
     opacity:1.0;
 }
@@ -66,7 +66,7 @@ window#waybar {
     font-weight: normal;
     font-style: normal;
     opacity:0.8;
-    border: 2px solid #ffffff;
+    border: 0px solid #ffffff;
 }
 
 #taskbar button {
@@ -117,7 +117,8 @@ window#waybar {
     padding: 1px 5px;
     background-color: transparent;
     /* background-color: rgba(18, 18, 15, 0.8); */
-    border-radius: 8px;
+    border: 2px;
+    border-radius: 16px;
 }
 #workspaces button {
     padding: 1px 5px;
