--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -10,7 +10,7 @@
 
 * {
     border: none;
-    font-family: Hack Nerd Font Mono;
+    font-family: Font Awesome, Roboto, Arial, sans-serif;
     font-size: 14px;
     color: #ffffff;
     border-radius: 0px;
@@ -125,7 +125,7 @@ window#waybar.empty #window {
 
  #clock {
     background-color: transparent;
-    font-size: 16px;
+    font-size: 18px;
     color: #ffffff;
     border-radius: 15px;
     padding: 0px 5px 0px 5px;
