--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,4 +1,26 @@
- /*************************************************** Home_screen_wallpaper ***************************************************/
+/* 
+https://github.com/soulhotel/FF-ULTIMA
+
+z-sites-newtab.css ~ NEW TABS
+
+z-sites.css ~ themes YOUTUBE and REDDIT
+
+z-site-scrollbars-and-pip.css ~ themes the scrollbar inside of your browser tab content
+
+To remove a certain feature, simple delete its line below, open website in new tab, no restart needed.
+*/
+
+@import url(theme/z-site-styles.css);
+
+@import url(theme/z-site-newtab.css);
+
+@import url(theme/z-site-reddit.css);
+
+@import url(theme/z-site-yt.css);
+
+/*@import url(theme/z-sites.css);*/
+
+/*************************************************** Home_screen_wallpaper ***************************************************/
 
 @-moz-document url("about:newtab"), url("about:home") {
     #root {
@@ -9,12 +31,11 @@
 
 
 /* Set background image for the settings (preferences) page */
-@-moz-document url("about:preferences") {
+@-moz-document url("about:preferences"), url("about:addons") {
     body {
         background: url("newtab/wallpaper-dark6.png") !important;
-        background-size: cover;
+        background-size: cover !important;
         /* background-color: #f0f0f050 !important; */
     }
     
   }
-
