--- a/config/wlogout/style.css
+++ b/config/wlogout/style.css
@@ -6,22 +6,23 @@ __      _| | ___   __ _  ___  _   _| |_
   \_/\_/ |_|\___/ \__, |\___/ \__,_|\__| 
                   |___/                  
  
-by Stephan Raabe (2023) 
+by PotBush 
 ----------------------------------------------------- 
 */
 
 * {
     font-family: Arial, Helvetica, sans-serif;
 	background-image: none;
-	transition: 20ms;
+	font-size: 16pt;
+
 }
 
 window {
-	background-color: rgba(12, 12, 12, 0.3);
+	background-color: rgba(0, 0, 0, 0.349);
 }
 
 button {
-    color: #FFFFFF;
+    color: #494949;
     font-size: 20px;
 
 	background-repeat: no-repeat;
@@ -30,54 +31,75 @@ button {
     
 	border-style: solid;
 	background-color: rgba(12, 12, 12, 0.6);
-    border: 3px solid #FFFFFF;
+    border: 3px solid #252525;
 
-	text-decoration-color: #FFFFFF;
+	text-decoration-color: #494949;
 
+    animation: gradient_f 10s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55, 0.0, .28, 1.682), box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-button:focus, 
-button:active, 
 button:hover {
     color: #FFFFFF;
 	background-color: rgba(18, 18, 18, 0.6);
+    background-size: 35%;
+    margin: 30px;
 	border: 3px solid #FFFFFF;
+    
 }
 
 #lock {
     margin: 10px;
     border-radius: 20px;
     animation: alternate;
-    background-image: image(url("~/.config/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    background-image: image(url("/home/potbush/.config/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+}
+#lock:hover {
+    background-image: image(url("/home/potbush/.config/wlogout/icons/lock_active.png"), url("/usr/local/share/wlogout/icons/lock.png"));
 }
 
 #logout {
     margin: 10px;
     border-radius: 20px;
-    background-image: image(url("~/.config/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
+    background-image: image(url("/home/potbush/.config/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
+}
+#logout:hover {
+    background-image: image(url("/home/potbush/.config/wlogout/icons/logout_active.png"), url("/usr/local/share/wlogout/icons/logout.png"));
 }
 
 #suspend {
     margin: 10px;
     border-radius: 20px;
-    background-image: image(url("~/.config/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
+    background-image: image(url("/home/potbush/.config/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
+}
+#suspend:hover {
+    background-image: image(url("/home/potbush/.config/wlogout/icons/suspend_active.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
 }
 
 #hibernate {
     margin: 10px;
     border-radius: 20px;
-    background-image: image(url("~/.config/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
+    background-image: image(url("/home/potbush/.config/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
+}
+#hibernate:hover {
+    background-image: image(url("/home/potbush/.config/wlogout/icons/hibernate_active.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
 }
 
 #shutdown {
     margin: 10px;
     border-radius: 20px;
-    background-image: image(url("~/.config/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
+    background-image: image(url("/home/potbush/.config/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
+}
+#shutdown:hover {
+    background-image: image(url("/home/potbush/.config/wlogout/icons/shutdown_active.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
 }
 
 #reboot {
     margin: 10px;
     border-radius: 20px;
-    background-image: image(url("~/.config/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
+    background-image: image(url("/home/potbush/.config/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
+}
+#reboot:hover {
+    background-image: image(url("/home/potbush/.config/wlogout/icons/reboot_active.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
 }
